bug fix on time selection center, buuton align on preview page and code clean

--- a/pre-registration-ui/src/app/feature/file-upload/file-upload/file-upload.component.css
+++ b/pre-registration-ui/src/app/feature/file-upload/file-upload/file-upload.component.css
@@ -456,7 +456,7 @@ mat-select:focus {
   filter: none;
 }
 .docposition{
-  margin-left: -321px;
+  margin-left: -13rem;
   text-decoration: underline #BCE0FD;
   color: #020F59;
   position: relative;
